fixed iPhone X layout issues

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -4,7 +4,13 @@
 // ----------------------------------------------
 
 body {
-  background: #F6F9FC;
+  background: #FFF;
+
+  padding-top: constant(safe-area-inset-top);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
+  box-sizing: border-box;
 }
 
 html,
@@ -111,6 +117,7 @@ md-sidenav {
 
   md-content {
     padding-top: 1em;
+    padding-bottom: 2em;
 
     md-icon {
       margin-right: 1em !important;
