--- a/app/styles/card.scss
+++ b/app/styles/card.scss
@@ -5,7 +5,7 @@
 .app-page-card {
   background: #FFF;
   border-radius: 8px;
-  overflow: hidden;
+  //overflow: hidden;
   //border: 1px solid #e8e6e6;
   box-shadow: 0 1px 2px rgba(50,50,93,.13);
   margin: 0 0.5em 1.5em;
@@ -34,8 +34,8 @@
   }
 
   .card-title, .card-title-count {
-    font-size: 1.1em;
-    margin-left: 1em;
+    font-size: 1.4em;
+    margin-left: 0.6em;
     color: $color-text;
     font-weight: 500;
   }
