--- a/app/styles/top-bar.scss
+++ b/app/styles/top-bar.scss
@@ -61,7 +61,7 @@
 .bottom-bar {
   width: 100%;
   height: 4em;
-  z-index: 120;
+  z-index: 20;
   background: #FFF;
   box-shadow: 0 0 3px rgba(0,0,0,0.15);
 
